--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev":"nodemon index.js",
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "type":"module",
+ 
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -16,6 +18,7 @@
     "cors": "^2.8.5",
     "dot-env": "^0.0.1",
     "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
     "mongoose": "^6.10.0",
     "nodemon": "^2.0.20"
   }
